src/parser/test/esprima/invalid-syntax/strict_assignment_protected.js
function hello() { "use strict"; protected = 1; }
